# cmake-packages-starter

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CmakeLists.txt  Readme.md  create_makefiles.sh  create_msvc.bat  thirdparties.cmake
cmake/: AssignSourceGroup.cmake  CPPCheck.cmake  CopyStaticFiles.cmake  add_framework.cmake  assign_source_group.cmake  copy_static_files.cmake  exclude_files.cmake  get_all_cmake_args.cmake  msvc_add_pch.cmake  msvc_set_win32.cmake  path_find_in_list.cmake  project_warnings.cmake
src/: CMakeLists.txt  CmakeLists.txt  assimp.cpp  assimp.h  bassplayer.cpp  bassplayer.h  hello.cpp  hello.h  json.cpp  json.h  stb.cpp  stb.h
src/MyExecutable/: CMakeLists.txt  main.cpp
src/MyLibrary/: HelloLogger.cpp  HelloLogger.h  assimp.cpp  assimp.h  bass.cpp  bass.h  hello.cpp  hello.h  json.cpp  json.h  platform.h  sol2.cpp  sol2.h  stb.cpp  stb.h
tests/: CMakeLists.txt  CmakeLists.txt  deploy_tests.cmake  main.cpp  test.cpp
tests/assets/: .gitignore  cube.ply
tests/benchmarks/: benchmark.cpp  main.cpp
tests/unittests/: main.cpp  test.cpp
